--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,7 +20,7 @@
 }
 
 .footer {
-	position: absolute;
+	position: fixed;
 	text-align: center;
 	bottom: 0;
 	width: 100%;
@@ -30,6 +30,6 @@
 
 .footer p {
 	margin-top: 25px;
-	font-size: 12px;
+  font-size: 12px;
   color: #fff;
 }
