--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -5,7 +5,9 @@
 <form action="/compose" method="post">
   <div class="form-group">
     <label>Title</label>
-    <input class="form-control" type="text" name="postTitle">
+    <textarea class="form-control" name="postTitle">
+
+  </textarea>
     <label>Post</label>
     <textarea class="form-control" name="postBody" rows="4" cols="50">
 
